<resources>
    <string name="app_name">CarPoolManager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="settings">Einstellungen</string>
    <string name="more">Erweitert</string>
    <string name="groups">Gruppen</string>
    <string name="aboutTheApp">Über die App</string>


    <string name="test">Test</string>
    <string name="account">Account</string>


    <string-array name="settings_standardView_main">
        <item>Gruppen</item>
        <item>Account</item>
    </string-array>

    <string-array name="settings_standardView_groups">
        <item>Übersicht</item>
        <item>Kalender</item>
    </string-array>

    <string-array name="settings_groups_tripCount">
        <item>Pro Weg</item>
        <item>Pro Fahrt</item>
    </string-array>

    <string-array name="addTrip_dialog_selectFuelType">
        <item>E5</item>
        <item>E10</item>
        <item>Diesel</item>
    </string-array>

</resources>