<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/navigation_menu_groups"
            android:icon="@drawable/ic_group"
            android:title="@string/groups" />
        <item
            android:id="@+id/navigation_menu_account"
            android:icon="@drawable/ic_account"
            android:title="@string/account" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/navigation_menu_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/navigation_menu_about"
                android:icon="@drawable/ic_about"
                android:title="@string/aboutTheApp" />
        </menu>
    </item>

</menu>
